# DSNA

./: setup.cfg  setup.py
dsna/automl/preservice/: conclude.py
dsna/automl/preservice/VIP/: test.py  train.py
