[metadata]
name = dsna
description = "DSNA"
author = vestech

[options]
python_requires = >=3.10
packages = 
    dsna
    dsana.base
    dsna.automl
install_requires =
    numpy==1.24.3

[options.extras_require]
automl =
    pandas==1.4.3
    pmdarima==2.0.3
    prophet==1.1.4
    scikit_learn==1.2.2
    tensorflow==2.13.0rc1
    xgboost==1.7.6

