[metadata]
name = dsna
description = "DSNA"
author = vestech

[options]
python_requires = >=3.10
packages = 
    dsna
    dsna.automl
    dsna.automl.preservice
    dsna.automl.preservice.VIP
    dsna.automl.utils
    dsna.base
    dsna.base.data
    dsna.base.utils
install_requires =
    numpy==1.24.3

[options.extras_require]
automl =
    pandas==1.5.3
    pmdarima==2.0.3
    prophet==1.1.4
    scikit_learn==1.2.2
    tensorflow==2.13.0rc1
    xgboost==1.7.6
    sdv==0.18.0
